--- a/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/index.html
+++ b/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/index.html
@@ -16,10 +16,12 @@
             <div class="col">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button><div class="buttons background_button"> home</div></button></div>
-                        <div class="col">my account</div>
-                        <div class="col">Shopping card</div>
-                        <div class="col">checkout</div>
+                        <div class="col">
+                            <button>Home</button>
+                            <button>My account</button>
+                            <button>Shopping cart</button>
+                            <button>Checkout</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -31,23 +33,29 @@
             <div class="col-md-3">test</div>
         </div>
     </div>
+
     <div class="container-fluid background_grey">
-        <div class="row col">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-2">smart phone</div>
-                    <div class="col">desktop</div>
-                    <div class="col">laptop</div>
-                    <div class="col">accessories</div>
-                    <div class="col">networking</div>
-                    <div class="col">software</div>
+        <div class="row">
+            <div class="col">
+                <div class="container" ;>
+                    <div class="row">
+                        <div class="col">
+                            <button>smartphone</button>
+                            <button>desktop</button>
+                            <button>laptop</button>
+                            <button>accessories</button>
+                            <button>networking</button>
+                            <button>software</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="container background_green">
         <div class="row">
-            <div class="col">home/Desktop</div>
+            <div class="col">Home/Desktop</div>
         </div>
     </div>
     <div class="container">
@@ -56,36 +64,61 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-9">Best configure and super brand</div>
-                        <div class="col-md-3">up to 50% off</div>
+                        <div class="col">Best configure and super brand</div>
+                        <div class="col">up to 50% off</div>
                     </div>
                 </div>
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
-                        <div class="col-md-4"><img src="https://picsum.photos/200/300" alt=""></div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
+                        <div class="p-3 border bg-light" style="max-width: 31.1%;">
+                            <div class="text-center"><img src="https://picsum.photos/200/300" alt=""></div>
+                        </div>
                     </div>
                 </div>
+
             </div> <!-- main-->
             <div class="col-md-3">
-                
+
                 <h4 class="background_green">category</h4>
                 <ul>
                     <li><a href="">smart phone</a></li>
@@ -203,7 +236,7 @@
                     <div class="row">
                         <div class="col-md-2"><button>WE ACCEPT</button></div>
                         <div class="col-md-4"> logo logo logo logo</div>
-                        <div class="col-md-2"><button>FLLOW US</button></div>
+                        <div class="col-md-2"><button>FOLLOW US</button></div>
                         <div class="col-md-4">
                             <button>F</button><button>X</button><button>G+</button><button>BE</button><button>D</button>
                         </div>
